Small changes to run the application on weblogic