@@ -2,14 +2,14 @@
 <project name="site" basedir="."
     xmlns:artifact="antlib:org.apache.maven.artifact.ant"
     xmlns:rsel="antlib:org.apache.tools.ant.types.resources.selectors">
-    
+
     <!-- import the ant / maven integration tasks -->
     <path id="maven-ant-tasks.classpath" path="../lib/maven-ant-tasks-2.1.3.jar" />
     <typedef resource="org/apache/maven/artifact/ant/antlib.xml" uri="antlib:org.apache.maven.artifact.ant" classpathref="maven-ant-tasks.classpath" />
-    
+
     <property name="project.root" location="../../"/>
     <property name="project.name" value="site" />
-    
+
 	<!-- See the following URL for a description of this property file strategy -->
 	<!-- The only difference is we prepend a . for the home directory property files -->
 	<!-- http://www.javaranch.com/ant/properties.jsp -->
@@ -18,22 +18,14 @@
     <property name="config.filename" value="${user.name}.properties"/>
     <property file="config/${config.filename}"/>
     <property file="../build.properties"/>
-	
+
 	<property name="runtime.environment" value="development"/>
-	
+
     <target name="tomcat-no-db">
         <delete dir="war/WEB-INF/lib"/>
         <artifact:mvn mavenHome="${maven.home}" fork="true">
-            <jvmarg value="-XX:MaxPermSize=256M" />
-            <jvmarg value="-Xmx512M" />
-            <jvmarg value="-Xdebug" />
-            <jvmarg value="-Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n" />
-            <jvmarg value="-Dmaven.multiModuleProjectDirectory=${maven.home}" />
-        	<jvmarg value="-javaagent:${spring.instrument.path}" />
-        	<jvmarg value="-Druntime.environment=${runtime.environment}" />
             <arg value="compile"/>
             <arg value="war:exploded"/>
-            <arg value="tomcat7:run"/>
         </artifact:mvn>
     </target>
 
@@ -47,10 +39,10 @@
             <jvmarg value="-javaagent:${spring.instrument.path}" />
             <jvmarg value="-Druntime.environment=${runtime.environment}" />
         	<jvmarg value="-Dmaven.multiModuleProjectDirectory=${maven.home}" />
-            <jvmarg value="-Ddatabase.user=${database.user}" />  
-            <jvmarg value="-Ddatabase.password=${database.password}" />  
-            <jvmarg value="-Ddatabase.driver=${database.driver}" />  
-            <jvmarg value="-Ddatabase.url=${database.url}" />  
+            <jvmarg value="-Ddatabase.user=${database.user}" />
+            <jvmarg value="-Ddatabase.password=${database.password}" />
+            <jvmarg value="-Ddatabase.driver=${database.driver}" />
+            <jvmarg value="-Ddatabase.url=${database.url}" />
             <arg value="compile"/>
             <arg value="war:exploded"/>
             <arg value="tomcat7:run"/>
@@ -69,11 +61,11 @@
             <jvmarg value="-Drebel.check_class_hash=true" />
             <jvmarg value="-agentpath:${jrebel.path}" />
             <jvmarg value="-javaagent:${spring.instrument.path}" />
-            <jvmarg value="-Druntime.environment=${runtime.environment}" />  
+            <jvmarg value="-Druntime.environment=${runtime.environment}" />
             <jvmarg value="-Dmaven.multiModuleProjectDirectory=${maven.home}" />
-            <jvmarg value="-Ddatabase.user=${database.user}" />  
-            <jvmarg value="-Ddatabase.password=${database.password}" />  
-            <jvmarg value="-Ddatabase.driver=${database.driver}" />  
+            <jvmarg value="-Ddatabase.user=${database.user}" />
+            <jvmarg value="-Ddatabase.password=${database.password}" />
+            <jvmarg value="-Ddatabase.driver=${database.driver}" />
             <jvmarg value="-Ddatabase.url=${database.url}" />
             <arg value="compile"/>
             <arg value="war:exploded"/>
@@ -81,7 +73,7 @@
         </artifact:mvn>
     </target>
 
-	
+
     <target name="tomcat-stop">
         <artifact:mvn mavenHome="${maven.home}" fork="true">
             <jvmarg value="-XX:MaxPermSize=256M" />
@@ -89,9 +81,9 @@
             <arg value="tomcat7:shutdown"/>
         </artifact:mvn>
     </target>
-	
+
 	<target name="stop-all" depends="tomcat-stop, stop-db"/>
-    
+
     <target name="start-db">
         <!-- Grab the HSQLDB jar and add it to the classpath -->
         <artifact:dependencies filesetId="hsql">
